tests/regression/error/hw5_error20.nex
anon (b, a) { var a; }(1,1);
